--- a/ApplicationSet.yaml
+++ b/ApplicationSet.yaml
@@ -26,7 +26,7 @@ spec:
       - path: pre-post-sync
         exclude: true
       - path: sync-waves
-        exclude: false
+        exclude: true
       - path: ksonnet-guestbook
         exclude: true
   template:
