Remove sync-waves

--- a/app-set/ApplicationSet.yaml
+++ b/app-set/ApplicationSet.yaml
@@ -27,6 +27,8 @@ spec:
         exclude: true
       - path: ksonnet-guestbook
         exclude: true
+      - path: sync-waves
+        exclude: false
   template:
     metadata:
       name: '{{.path.basename}}'
